# MSampleFrame

./: CMakeLists.txt  README.md  example.cpp  example.qml  msampleframe.cpp  msampleframe.h
example/: example.cpp  example.qml
